# multi-agent-bi-platform

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml
backend/app/: main.py  worker.py  workflow.py
backend/app/agents/: critic.py  memory_agent.py  orchestrator.py  planner.py  qa.py  research.py  strategy.py
backend/app/api/: routes.py
backend/app/services/: history.py  llm.py  logger.py  memory.py  metrics.py  permissions.py  security.py  tracing.py
backend/chroma_cache/chroma/: telemetry_user_id
backend/logs/: workflow_history.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: WorkflowGraph.jsx
