[tool.poetry]
name = "multi-agent-platform"
version = "0.1.0"
description = "Simple Multi Agent BI Platform"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"

fastapi = "^0.115.0"
uvicorn = "^0.30.0"

crewai = "^0.41.1"

google-generativeai = "^0.8.0"

chromadb = "0.4.24"

celery = "^5.4.0"
redis = "^5.0.0"

prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"

setuptools = "^75.0.0"
slowapi = "^0.1.9"


python-dotenv = "^1.0.1"
httpx = "^0.27.0"

opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"

opentelemetry-exporter-jaeger-thrift = "^1.21.0"

opentelemetry-instrumentation-fastapi = "^0.48b0"

opentelemetry-instrumentation-requests = "^0.48b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"